--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
  <!-- <link rel="stylesheet" href="./src/index.css"> -->
     <!-- <link rel="stylesheet" href="./src/index.css"> -->
-<link rel="stylesheet" href="src/index.css">
+<!-- <link rel="stylesheet" href="src/index.css"> -->
 
   </head>
   <body>
